syntax = "proto2";

package raft_msg;

import "log_entry.proto";

message AppendEntriesRequest {
    required uint64 term           = 1;
	required uint64 prev_log_index = 2;
	required uint64 prev_log_term  = 3;
	required uint64 commit_index   = 4;
	required string leader_name    = 5;
	repeated LogEntry entries      = 6;
}